ADD: document acknowledgement page

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -52,4 +52,10 @@ breaklines=true
 \include{chapters/title}
 \include{chapters/certificate}
 \include{chapters/approval}
+
+\tableofcontents
+\listoffigures
+
+\include{chapters/acknowlegdement}
+
 \end{document}
