ADD: document synopsis page

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -54,8 +54,12 @@ breaklines=true
 \include{chapters/approval}
 
 \tableofcontents
-\listoffigures
 
 \include{chapters/acknowlegdement}
+\include{chapters/synopsis}
+\addcontentsline{toc}{section}{List Of Figures}
+\listoffigures
+\addcontentsline{toc}{section}{List Of Tables}
+\listoftables
 
 \end{document}
