ADD: document introduction page

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -62,4 +62,6 @@ breaklines=true
 \addcontentsline{toc}{section}{List Of Tables}
 \listoftables
 
+\include{chapters/introduction}
+
 \end{document}
