ADD: document prerequistes

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -19,6 +19,7 @@ sorting=none
 \usepackage{listings}
 \usepackage{titlesec}
 \usepackage{hyperref}
+\usepackage{longtable}
 \hypersetup{
     colorlinks=true,
 		citecolor=black,
@@ -64,5 +65,6 @@ breaklines=true
 
 \include{chapters/introduction}
 \include{chapters/literaturesurvey}
+\include{chapters/prerequisites}
 
 \end{document}
