ADDED: document proposed work and design

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -66,5 +66,7 @@ breaklines=true
 \include{chapters/introduction}
 \include{chapters/literaturesurvey}
 \include{chapters/prerequisites}
+\include{chapters/proposed_work}
+\include{chapters/design}
 
 \end{document}
