ADDED:document  implementation section

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -20,6 +20,7 @@ sorting=none
 \usepackage{titlesec}
 \usepackage{hyperref}
 \usepackage{longtable}
+\usepackage{listings}
 \hypersetup{
     colorlinks=true,
 		citecolor=black,
@@ -68,5 +69,6 @@ breaklines=true
 \include{chapters/prerequisites}
 \include{chapters/proposed_work}
 \include{chapters/design}
+\include{chapters/implementation.tex}
 
 \end{document}
