ADDED:document  conclusion page

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -70,5 +70,7 @@ breaklines=true
 \include{chapters/proposed_work}
 \include{chapters/design}
 \include{chapters/implementation.tex}
+\include{chapters/conclusion}
 
+\printbibliography
 \end{document}
