MODIFY: Fixing sematics

--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -58,9 +58,10 @@ breaklines=true
 
 \include{chapters/acknowlegdement}
 \include{chapters/synopsis}
-\addcontentsline{toc}{section}{List Of Figures}
+\addcontentsline{toc}{chapter}{LIST OF FIGURES}
 \listoffigures
-\addcontentsline{toc}{section}{List Of Tables}
+\newpage
+\addcontentsline{toc}{chapter}{LIST OF TABLES}
 \listoftables
 
 \include{chapters/introduction}
@@ -71,5 +72,6 @@ breaklines=true
 \include{chapters/implementation.tex}
 \include{chapters/conclusion}
 
+\addcontentsline{toc}{chapter}{BIBLIOGRAPHY}
 \printbibliography
 \end{document}
